--- a/_posts/2024-11-01-the-post-2248.md
+++ b/_posts/2024-11-01-the-post-2248.md
@@ -1,11 +1,10 @@
 ---
-categories: Uncategoried
-layout: post
-published: false
-tags: 
-title: Unnamed
+title: Review HP Chromebook 11 G8 EE
+tags: [Review, Chromebook]
+style: fill
+color: info
+description: Review HP Chromebook 11 G8 EE
 ---
-# Review HP Chromebook 11 G8 EE
 Chromebook mungkin masih terdengar asing bagi sebagian masyarakat Indonesia, Tidak mengherankan karena hampir seluruh masyarakat Indonesia menggunakan Laptop dengan OS Windows yang terinstall didalamnya.
 
 Jujur ini juga kali pertama saya menggunakan Chromebook, walaupun dulu saya sempat menggunakan Chrome OS Flex di laptop pribadi saya, tidak bisa saya pungkiri, menggunakan Chrome OS di Chromebook rasanya jauh lebih nyaman, mungkin karena sudah didesain khusus agar hardware dan OS-nya bisa bekerja dengan baik, dari build quality sampai kinerja OSnya semuanya berjalan dengan baik.
