--- a/_posts/2024-11-01-the-post-2248.md
+++ b/_posts/2024-11-01-the-post-2248.md
@@ -11,6 +11,8 @@ Jujur ini juga kali pertama saya menggunakan Chromebook, walaupun dulu saya semp
 
 Secara spesifikasi chromebook sebenarnya tergolong biasa saja, dibekali processor Intel Celeron, RAM 4 GB serta penyimpanan eMMC yang hanya 32 GB, namun karena dia menggunakan ChromeOS sebagai sistem operasinya, dimana ChromeOS itu sendiri berbasis linux yang sudah didesain dan dioptimalisasi oleh pihak google, sehingga mampu berjalan lancar di spesifikasi yang biasa saja.
 
+{% include elements/figure.html image="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg14wCXdgXzvGc0KVlMihyMDsU5EeAdapuTmOoDlpio6ljZD8KP2ztEZhRkYJWZyToyGHecl17pVvk_GxnUV6mHgH0ZhwFYudtov1sCF9GpIfob6wFk4wxIWwK_QyycyhPnL75b8j7l7emLjZcldjyqcbTcUsRju1o26VKMiVaVm-qRdA25rkzMXFrsivWR/s1366/Screenshot%202024-10-16%2018.21.51.png" caption="Chromebook" %}
+
 ChromeOS di Chromebook juga dibekali dengan Google Play Store didalamnya, dimana ini cukup memudahkan kita sebagai pengguna dalam menginstall aplikasi saat menggunakan chromebook, memang tidak semua aplikasi bisa dijalankan di chromebook, namun aplikasi yang tersedia dan bisa digunakan juga tidak sedikit sehingga sudah lebih dari cukup.
 
 
@@ -21,7 +23,6 @@ di internet yang memudahkan kita sebagai pengguna dalam mengoperasikannya.
 Untuk penggunaan yang berat seperti Gaming, Editing hingga programming, tentu kita tidak bisa berharap banyak dengan chromebook, karena memang chromebook didesain untuk melakukan pekerjaan yang tidak terlalu berat mengingat spesifikasi yang terbatas, namun bukan berarti tidak bisa, ada beberapa games yang sangat lancar dimainkan serta ada beberapa aplikasi alternatif yang bisa digunakan untuk Editing dan Programming dengan fitur yang mungkin terbatas namun ringan dijalankan.
 Overall selama penggunaan saya dimana lebih banyak menghabiskan pekerjaan melalui browser, chromebook menjadi rekomendasi saya bagi pengguna yang tidak terlalu perlu menjalankan aplikasi yang berat serta ingin mencari laptop yang dari segi harga murah namun tetap lancar dan cepat saat digunakan.
 
-Jika teman-teman ada yang ingin ditanyakan perihal Chromebook dan ChromeOS, ataupun ingin sharing pengalaman menariknya selama menggunakan Chromebook dan ChromeOS, bisa comment dibawah 👇
 
 
 
