--- a/_posts/2024-11-01-the-post-2248.md
+++ b/_posts/2024-11-01-the-post-2248.md
@@ -11,7 +11,7 @@ Jujur ini juga kali pertama saya menggunakan Chromebook, walaupun dulu saya semp
 
 Secara spesifikasi chromebook sebenarnya tergolong biasa saja, dibekali processor Intel Celeron, RAM 4 GB serta penyimpanan eMMC yang hanya 32 GB, namun karena dia menggunakan ChromeOS sebagai sistem operasinya, dimana ChromeOS itu sendiri berbasis linux yang sudah didesain dan dioptimalisasi oleh pihak google, sehingga mampu berjalan lancar di spesifikasi yang biasa saja.
 
-{% include elements/figure.html image="https://raw.githubusercontent.com/felixrizkylesmana/felixrizkylesmana.github.io/refs/heads/master/assets/images/chromebook-playstore.png" caption="Chromebook" %}
+{% include elements/figure.html image="https://raw.githubusercontent.com/felixrizkylesmana/felixrizkylesmana.github.io/refs/heads/master/assets/images/chromebook-playstore.png" caption="Playstore di Chromebook" %}
 
 ChromeOS di Chromebook juga dibekali dengan Google Play Store didalamnya, dimana ini cukup memudahkan kita sebagai pengguna dalam menginstall aplikasi saat menggunakan chromebook, memang tidak semua aplikasi bisa dijalankan di chromebook, namun aplikasi yang tersedia dan bisa digunakan juga tidak sedikit sehingga sudah lebih dari cukup.
 
