--- a/_posts/2024-11-01-the-post-2248.md
+++ b/_posts/2024-11-01-the-post-2248.md
@@ -7,7 +7,7 @@ description: Review HP Chromebook 11 G8 EE
 ---
 Chromebook mungkin masih terdengar asing bagi sebagian masyarakat Indonesia, Tidak mengherankan karena hampir seluruh masyarakat Indonesia menggunakan Laptop dengan OS Windows yang terinstall didalamnya.
 
-Jujur ini juga kali pertama saya menggunakan Chromebook, walaupun dulu saya sempat menggunakan Chrome OS Flex di laptop pribadi saya, tidak bisa saya pungkiri, menggunakan Chrome OS di Chromebook rasanya jauh lebih nyaman, mungkin karena sudah didesain khusus agar hardware dan OS-nya bisa bekerja dengan baik, dari build quality sampai kinerja OSnya semuanya berjalan dengan baik.
+Jujur ini juga kali pertama saya menggunakan Chromebook, walaupun dulu saya sempat menggunakan Chrome OS Flex di laptop pribadi saya, tidak bisa saya pungkiri, menggunakan Chrome OS di Chromebook rasanya jauh lebih nyaman, mungkin karena sudah didesain khusus agar hardware dan OS-nya bisa bekerja dengan baik, dari build quality sampai kinerja OS-nya semuanya berjalan dengan baik.
 
 Secara spesifikasi chromebook sebenarnya tergolong biasa saja, dibekali processor Intel Celeron, RAM 4 GB serta penyimpanan eMMC yang hanya 32 GB, namun karena dia menggunakan ChromeOS sebagai sistem operasinya, dimana ChromeOS itu sendiri berbasis linux yang sudah didesain dan dioptimalisasi oleh pihak google, sehingga mampu berjalan lancar di spesifikasi yang biasa saja.
 
